<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="title_app">My Restaurant</string>
    <string name="app_name">DBP10-2021-2</string>
    <string name="txt_input_name">Enter your name:</string>
    <string name="txt_toppings">Toppings</string>
    <string name="txt_meat">Meat</string>
    <string name="txt_pineapple">Pineapple</string>
    <string name="txt_quantity">Quantity</string>
    <string name="txt_submit_order">Submit order</string>
    <string name="order_summary_name">Hello <xliff:g id="name">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity">%d</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">Not</string>
    <string name="order_summary_has_meat">Has meat? <xliff:g id="meat">%s</xliff:g></string>
    <string name="order_summary_has_pineapple">Has pineapple? <xliff:g id="pineapple">%s</xliff:g></string>
    <string name="total_order">Total: <xliff:g id="total">%d</xliff:g></string>
    <string name="order_summary_thanks">Thank you!!</string>


</resources>