<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DBFFEB3B"
    android:backgroundTint="#07090808">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/default_size"
        android:layout_marginRight="@dimen/default_size"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginBottom="@dimen/default_size"
            android:text="@string/title_app"
            android:textSize="@dimen/title_size" />


        <EditText
            android:id="@+id/name_edit_text_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_input_name" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_toppings" />

        <CheckBox
            android:id="@+id/checkbox_meat_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/txt_meat"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_pineapple_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/txt_pineapple"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_decrement_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/txt_quantity_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_increment_id"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_size"
            android:onClick="submitOrder"
            android:text="@string/txt_submit_order"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/summary_order_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>
